// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module edition page - concept list snapshots should match previous snapshot with a non-empty moduleList prop 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ModuleConceptList
    conceptList={
      Array [
        Object {
          "description": "dummy_module_desc_1",
          "id": "dummy_module_id_1",
          "title": "dummy_module_title_1",
        },
        Object {
          "description": "dummy_module_desc_2",
          "id": "dummy_module_id_2",
          "title": "dummy_module_title_2",
        },
        Object {
          "description": "dummy_module_desc_3",
          "id": "dummy_module_id_3",
          "title": "dummy_module_title_3",
        },
      ]
    }
    moduleId="1"
    subjectId="1"
  />
</ContextProvider>
`;

exports[`Module edition page - concept list snapshots should match previous snapshot with an empty moduleList prop 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ModuleConceptList
    conceptList={Array []}
    moduleId="1"
    subjectId="1"
  />
</ContextProvider>
`;
